fixed UI responsive issue

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,13 @@
 <div>
     <mat-toolbar color="primary">
-        <span>Logo &nbsp;</span>
-        <span>My Github</span>
+        <!-- <span>Logo &nbsp;</span>
+        <span>My Github</span> -->
         <span class="example-spacer"></span>
         <mat-icon [title]="navTitle" (click)="navigate()">{{navIcon}}</mat-icon>
     </mat-toolbar>
 </div>
 <div class="breadCrumb">
-    <span>DASHBOARD | {{currentPage| uppercase}}</span>
+    <!-- <span>DASHBOARD | {{currentPage| uppercase}}</span> -->
 </div>
 <div>
     <router-outlet></router-outlet>
