--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 <div *ngIf="!searchNotPerformed" class="row users-list" (scroll)="onScroll($event)">
-    <div class="col-3" *ngFor="let user of users">
+    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3" *ngFor="let user of users">
         <mat-card class="user-card" (click)="onCardClick(user)">
             <mat-card-title-group>
                 <mat-card-title>{{user.login}}</mat-card-title>
